Fix usage of sleep with duration equal to some prescaler value
+ There must be an empty ISR when the program sleeps with a period of
time that is equal to some prescaler value. This avoids that the GCC
default ISR resets the program when the watchdog wakes up.
+ Fix demos that use 16bits of resolution to the counter The macro
AVRCXX_WATCHDOG_COUNTER_RESOLUTION must be defined for the whole
program.

--- a/demo/Makefile
+++ b/demo/Makefile
@@ -24,20 +24,38 @@ include $(demos:%=%.d)
 %.s: %.cpp
 	$(CXX) $(CXXFLAGS) -S $^
 
+power_down_sleep_1s.s: power_down_sleep_1s.cpp
+	$(CXX) $(CXXFLAGS) -DAVRCXX_WATCHDOG_ELLIDE_COUNTER -S $^
+
+power_down_sleep_45min.s: power_down_sleep_45min.cpp
+	$(CXX) $(CXXFLAGS) -DAVRCXX_WATCHDOG_COUNTER_RESOLUTION=16 -S $^
+
+power_down_sleep_1h.s: power_down_sleep_1h.cpp
+	$(CXX) $(CXXFLAGS) -DAVRCXX_WATCHDOG_COUNTER_RESOLUTION=16 -S $^
+
+power_down_sleep_45min.o: power_down_sleep_45min.cpp
+	$(CXX) $(CXXFLAGS) -DAVRCXX_WATCHDOG_COUNTER_RESOLUTION=16 -c -o $@ power_down_sleep_45min.cpp
+
+power_down_sleep_1h.o: power_down_sleep_1h.cpp
+	$(CXX) $(CXXFLAGS) -DAVRCXX_WATCHDOG_COUNTER_RESOLUTION=16 -c -o $@ power_down_sleep_1h.cpp
+
+power_down_sleep_1s.o: power_down_sleep_1s.cpp
+	$(CXX) $(CXXFLAGS) -DAVRCXX_WATCHDOG_ELLIDE_COUNTER -c -o $@ power_down_sleep_1s.cpp
+
 power_down_sleep_1h.elf: power_down_sleep_1h.o
-	$(CXX) $(CXXFLAGS) -o $@ $^ ../src/avrcxx/watchdog/counter.cpp
+	$(CXX) $(CXXFLAGS) -DAVRCXX_WATCHDOG_COUNTER_RESOLUTION=16 -o $@ $^ ../src/avrcxx/watchdog/isr.cpp
 
 power_down_sleep_45min.elf: power_down_sleep_45min.o
-	$(CXX) $(CXXFLAGS) -o $@ $^ ../src/avrcxx/watchdog/counter.cpp
+	$(CXX) $(CXXFLAGS) -DAVRCXX_WATCHDOG_COUNTER_RESOLUTION=16 -o $@ $^ ../src/avrcxx/watchdog/isr.cpp
 
 power_down_sleep_30s.elf: power_down_sleep_30s.o
-	$(CXX) $(CXXFLAGS) -o $@ $^ ../src/avrcxx/watchdog/counter.cpp
+	$(CXX) $(CXXFLAGS) -o $@ $^ ../src/avrcxx/watchdog/isr.cpp
 
 power_down_sleep_3s.elf: power_down_sleep_3s.o
-	$(CXX) $(CXXFLAGS) -o $@ $^ ../src/avrcxx/watchdog/counter.cpp
+	$(CXX) $(CXXFLAGS) -o $@ $^ ../src/avrcxx/watchdog/isr.cpp
 
 power_down_sleep_1s.elf: power_down_sleep_1s.o
-	$(CXX) $(CXXFLAGS) -o $@ $^
+	$(CXX) $(CXXFLAGS) -DAVRCXX_WATCHDOG_ELLIDE_COUNTER -o $@ $^ ../src/avrcxx/watchdog/isr.cpp
 
 %.lst: %.elf
 	$(OBJDUMP) -h -S $< > $@
